--- a/estilos.css
+++ b/estilos.css
@@ -27,3 +27,9 @@ h4{
 h6{
 	color:#1096FF
 }
+#flip {
+ 	 padding: 5px;
+ 	 text-align: center;
+ 	 background-color: #e5eecc;
+ 	 border: solid 1px #c3c3c3;
+		}
