--- a/estilos.css
+++ b/estilos.css
@@ -30,6 +30,6 @@ h6{
 #flip {
  	 padding: 5px;
  	 text-align: center;
- 	 background-color: #e5eecc;
+ 	 background-color: #155D49;
  	 border: solid 1px #c3c3c3;
 		}
